<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout

        android:id="@+id/input_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    >
        <EditText
            android:text="lisi"
            android:id="@id/input_name"
            style="@style/EditTextStyle"
            android:hint="@string/input_name"
        />
        <EditText
            android:text="511602198756232657"
            android:inputType="phone"
            android:id="@id/input_userid"
            style="@style/EditTextStyle"
            android:hint="@string/input_userid"
        />

        <EditText
            android:id="@id/input_phone_no"
            style="@style/EditTextStyle"
            android:inputType="phone"
            android:hint="@string/input_phone_no"
        />
        <Button
            android:id="@id/bt_open_card"
            style="@style/ButtonStyle"
            android:layout_marginTop="200dp"
            android:text="@string/open_card"
        />
    </LinearLayout>
    <LinearLayout

        android:id="@id/recharge_cash_pledge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
           style="@style/CardTextStyle"
            android:text="卡号:"
            android:textSize="20sp"/>
        <TextView
            android:id="@id/card_uid"
            style="@style/CardTextStyle"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/CardTextStyle"
                android:text="@string/card_deposit"
              />
            <TextView
                android:id="@id/card_deposit"
                style="@style/CardTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/CardTextStyle"
                android:text="@string/card_balance"
            />
            <TextView
                android:id="@id/card_balance"
                style="@style/CardTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/CardTextStyle"
                android:text="@string/realName"
            />
            <TextView
                android:id="@id/realName"
                style="@style/CardTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/CardTextStyle"
                android:text="@string/mobilePhone"
            />
            <TextView
                android:id="@id/mobilePhone"
                style="@style/CardTextStyle"/>
        </LinearLayout>
        <TextView
           android:textSize="18sp"
            android:gravity="center"
            android:id="@id/open_card_statue"
            android:layout_width="match_parent"
                  android:layout_height="40dp"/>
        <RelativeLayout
            android:id="@id/relative_butt"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@id/bt_recharge_cash"
                style="@style/ButtonStyle"
               android:layout_centerHorizontal="true"
                android:text="@string/recharge_cash_pledge"
            />
            <Button
                android:layout_marginTop="30dp"
                android:id="@id/bt_cancel"
                style="@style/ButtonStyle"
                android:layout_below="@id/bt_recharge_cash"
                android:layout_centerHorizontal="true"
                android:text="@string/recharge_cancel"/>
            <Button
                android:id="@id/complete"
                style="@style/ButtonStyle"
                android:layout_centerInParent="true"
                android:text="@string/complete"
                android:visibility="invisible"

            />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>