<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/createDate"
        />
        <TextView
            android:id="@id/createDate"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/sequence_no"
        />
        <TextView
            android:id="@id/sequence_no"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_cid"
        />
        <TextView
            android:id="@id/card_cid"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_state"
        />
        <TextView
            android:id="@id/card_state"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="卡号:"
            android:textSize="20sp"/>
        <TextView
            android:id="@id/card_no"
            style="@style/CardTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_deposit"
        />
        <TextView
            android:id="@id/card_deposit"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_balance"
        />
        <TextView
            android:id="@id/card_balance"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/realName"
        />
        <TextView
            android:id="@id/realName"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/mobilePhone"
        />
        <TextView
            android:id="@id/mobilePhone"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/ll_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_bg_select"
            android:text="@string/go_back"
        />
        <Button
            android:id="@id/lock"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_bg_select"
            android:text="@string/lock"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@id/ll_unlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@id/go_back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_bg_select"
            android:text="@string/go_back"
        />
        <Button
            android:id="@id/unlock"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_bg_select"
            android:text="@string/unlock"
        />
    </LinearLayout>
</LinearLayout>
