<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <LinearLayout

        android:id="@id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/createDate"
        />
        <TextView
            android:id="@id/createDate"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/sequence_no"
        />
        <TextView
            android:id="@id/sequence_no"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_cid"
        />
        <TextView
            android:id="@id/card_cid"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_state"
        />
        <TextView
            android:id="@id/card_state"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="卡号:"
            android:textSize="20sp"/>
        <TextView
            android:id="@id/card_no"
            style="@style/CardTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_deposit"
        />
        <TextView
            android:id="@id/card_deposit"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_balance"
        />
        <TextView
            android:id="@id/card_balance"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/realName"
        />
        <TextView
            android:id="@id/realName"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/mobilePhone"
        />
        <TextView
            android:id="@id/mobilePhone"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/ll_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@id/go_back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_bg_select"
            android:text="@string/go_back"
        />
        <Button
            android:id="@id/termination"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_bg_select"
            android:text="@string/termaintion"
        />

    </LinearLayout>

</LinearLayout>
    <RelativeLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_centerInParent="true"
            android:id="@id/text_oo"
            android:textSize="30sp"
            android:text="刷卡失败请重新刷卡"
            android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
        <Button
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/text_oo"
            android:id="@id/bt_resume"
            android:text="重新刷卡"
        style="@style/ButtonStyle"
        />
        <Button
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_below="@id/bt_resume"
            android:id="@id/bt_go_back"
            android:text="返回"
            style="@style/ButtonStyle"
        />
    </RelativeLayout>
</LinearLayout>