<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/CardTextStyle"
            android:text="卡号:"
            android:textSize="20sp"/>
        <TextView
            android:id="@id/card_no"
            style="@style/CardTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_deposit"
        />
        <TextView
            android:id="@id/card_deposit"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/card_balance"
        />
        <TextView
            android:id="@id/card_balance"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/realName"
        />
        <TextView
            android:id="@id/realName"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/CardTextStyle"
            android:text="@string/mobilePhone"
        />
        <TextView
            android:id="@id/mobilePhone"
            style="@style/CardTextStyle"/>
    </LinearLayout>
    <TextView
        android:id="@id/open_card_statue"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="match_parent"
              android:layout_height="50dp"/>
</LinearLayout>